--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,12 @@
 		<artifactId>spring</artifactId>
 		<version>2.5.6</version>
 	</dependency>
-    
+    <!-- Maven Compiler Plugin added -->
+    <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.1</version>
+</dependency>
     
   </dependencies>
 </project>
