disable web.xml attribute in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
     <artifactId>maven-compiler-plugin</artifactId>
     <version>3.1</version>
 </dependency>
-    
-  </dependencies>
+    <!-- disable WebXML Attribute -->
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+   
+    </dependencies>
 </project>
