--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,12 @@
     <version>3.1</version>
 </dependency>
     <!-- disable WebXML Attribute -->
-     <plugin>
+     <dependency>	
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
-      </plugin>
-   
+     </dependency>
     </dependencies>
 </project>
