--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
      <dependency>	
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
+        <version>2.6</version>
         <configuration>
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
