--- a/pom.xml
+++ b/pom.xml
@@ -29,4 +29,18 @@
     <version>3.1</version>
     </dependency>
   </dependencies>
+   <!-- web.xml disabled --> 
+    <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  
+ <!-- Web.xml Disabled Above -->  
 </project>
