--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,19 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
+   /*  -------------   */
+      <plugin>
+   	<groupId>org.codehaus.mojo</groupId>
+   	<artifactId>tomcat-maven-plugin</artifactId>
+   	<configuration>
+           <url>http://localhost:8282/manager</url>
+           <server>tomcat</server>
+           <username>tomcat</username>
+           <password>tomcat</password>
+   	</configuration>
+       </plugin>
+  /* ----------------- */
     </plugins>
   </build>
-  
- <!-- Web.xml Disabled Above -->  
+ 
 </project>
