--- a/pom.xml
+++ b/pom.xml
@@ -40,16 +40,18 @@
         </configuration>
       </plugin>
    /*  -------------   */
-      <plugin>
-   	<groupId>org.codehaus.mojo</groupId>
-   	<artifactId>tomcat-maven-plugin</artifactId>
-   	<configuration>
-           <url>http://localhost:8282/manager</url>
-           <server>tomcat</server>
-           <username>tomcat</username>
-           <password>tomcat</password>
-   	</configuration>
-       </plugin>
+    <plugin>
+    <groupId>org.apache.tomcat.maven</groupId>
+    <artifactId>tomcat7-maven-plugin</artifactId>
+    <version>2.1</version>
+    <configuration>
+        <url>http://localhost:8282</url>
+        <server>tomcat</server>
+        <path>/manager</path>
+        <username>tomcat</username>
+        <password>tomcat</password>
+    </configuration>
+   </plugin>
   /* ----------------- */
     </plugins>
   </build>
