--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
-    <!- ==tomcat Username/Password changed== -->
+    <!-- ==tomcat Username/Password changed== -->
     <plugin>
     <groupId>org.apache.tomcat.maven</groupId>
     <artifactId>tomcat7-maven-plugin</artifactId>
